--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Install surge
       run: npm install -g surge
     - name: run surge
-      run: surge vakasgnabi/bootcamp2020 bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
      
