--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Install surge
       run: npm install -g surge
     - name: Deploy surge
-      run: surge ./build bootcamp2020_react_vakas.surge.sh --token ${{secrets.SURGE_REACT_TOKEN}}
+      run: surge ./build bootcamp2020_react_vakas.surge.sh --token ${{secrets.SURGE_TOKEN}}
      
